// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScoreBadge > snapshot for acceptable bin > acceptable 1`] = `
<span
  aria-label="Match: Acceptable"
  class="inline-flex shrink-0 items-center justify-center rounded-sm font-mono font-semibold uppercase text-text-inverse bg-score-acceptable h-[26px] px-2.5 text-[11px] tracking-[0.1em]"
  role="img"
>
  <span
    aria-hidden="true"
  >
    Acceptable
  </span>
</span>
`;

exports[`ScoreBadge > snapshot for avoid bin > avoid 1`] = `
<span
  aria-label="Match: Avoid"
  class="inline-flex shrink-0 items-center justify-center rounded-sm font-mono font-semibold uppercase text-text-inverse bg-score-avoid h-[26px] px-2.5 text-[11px] tracking-[0.1em]"
  role="img"
>
  <span
    aria-hidden="true"
  >
    Avoid
  </span>
</span>
`;

exports[`ScoreBadge > snapshot for good bin > good 1`] = `
<span
  aria-label="Match: Good option"
  class="inline-flex shrink-0 items-center justify-center rounded-sm font-mono font-semibold uppercase text-text-inverse bg-score-good h-[26px] px-2.5 text-[11px] tracking-[0.1em]"
  role="img"
>
  <span
    aria-hidden="true"
  >
    Good option
  </span>
</span>
`;

exports[`ScoreBadge > snapshot for perfect bin > perfect 1`] = `
<span
  aria-label="Match: Perfect match"
  class="inline-flex shrink-0 items-center justify-center rounded-sm font-mono font-semibold uppercase text-text-inverse bg-score-perfect h-[26px] px-2.5 text-[11px] tracking-[0.1em]"
  role="img"
>
  <span
    aria-hidden="true"
  >
    Perfect match
  </span>
</span>
`;
